# el-la-la

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  nouns.csv
migrations/: V1__create_users_table.sql  V2__create_nouns_table.sql  V3__create_user_plays_table.sql
src/: domain.rs  main.rs
src/client/: telegram.rs
src/repository/: connector.rs  migration.rs  mod.rs  nouns.rs  user_plays.rs  users.rs
src/service/: bot.rs
