[package]
name = "el-la-la"
version = "0.1.0"
edition = "2021"

[dependencies]
refinery = { version = "0.8.14", features = ["mysql"] }
chrono = { version = "0.4.38", features = ["serde"] }
mysql = { version = "24.0.0"}
mysql_common = { version = "0.32.4", features = ["chrono"] }
csv = "1.3.0"
dotenv = "0.15.0"
frankenstein = "0.34.0"
serde = { version = "1.0.210", features = ["derive"] }
rand = "0.8.5"
